hphp/hack/test/ifc/check/unary_operators.php.exp
=== IFC analysis results for unary_operators.php
File "unary_operators.php", line 24, characters 3-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "unary_operators.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "unary_operators.php", line 9, characters 16-21:
  This may be the data sink with policy `B`
File "unary_operators.php", line 23, characters 3-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "unary_operators.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "unary_operators.php", line 9, characters 16-21:
  This may be the data sink with policy `B`
File "unary_operators.php", line 17, characters 5-12:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "unary_operators.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "unary_operators.php", line 9, characters 16-21:
  This may be the data sink with policy `B`
  File "unary_operators.php", line 13, characters 7-18:
  Another program point contributing to the illegal flow
File "unary_operators.php", line 16, characters 5-12:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "unary_operators.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "unary_operators.php", line 9, characters 16-21:
  This may be the data sink with policy `B`
  File "unary_operators.php", line 13, characters 7-18:
  Another program point contributing to the illegal flow
